apps/ceph/cluster-role.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph-system
