apps/ceph/rook-cluster-role-bindings.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
