apps/ceph/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
  annotations:
    certmanager.k8s.io/cluster-issuer: "internal"
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
    prometheus.io/probe: "true"
spec:
  rules:
    - host: ceph-dashboard.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: rook-ceph-mgr-dashboard
              servicePort: 7000
  tls:
    - hosts:
      - ceph-dashboard.k8s.grigri
      secretName: ceph-dashboard-tls
