apps/ceph/object-s3-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-rgw-s3
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    ceph_daemon_id: s3
    rgw: s3
    rook_cluster: rook-ceph
    rook_object_store: s3
  annotations:
    certmanager.k8s.io/cluster-issuer: "internal"
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: s3.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: rook-ceph-rgw-s3
              servicePort: 80
  tls:
    - hosts:
      - s3.k8s.grigri
      secretName: s3-tls
