apps/ceph/prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: rook-prometheus
  name: rook-prometheus
  namespace: rook-ceph
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app: prometheus
    prometheus: rook-prometheus
  sessionAffinity: ClientIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-prometheus
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    certmanager.k8s.io/cluster-issuer: "internal"
    prometheus.io/probe: "true"
spec:
  tls:
  - hosts:
    - rook-prometheus.k8s.grigri
    secretName: rook-prometheus-tls
  rules:
  - host: rook-prometheus.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-prometheus
          servicePort: web
